--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,7 @@ Welcome Back
 login to your account
 </string>
     <string name="log_in">
-log in
+Log in
 </string>
     <string name="forgot_pass">
 Forgot password?
